feature: add logic login

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,17 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'org.jetbrains.kotlin.kapt'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
-        applicationId "me.dungngminh.authenticationapp"
-        minSdk 21
+        applicationId "me.dungngminh.verygoodblogapp"
+        minSdk 23
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -24,7 +27,7 @@ android {
         }
     }
 
-    buildFeatures{
+    buildFeatures {
         viewBinding true
     }
 
@@ -38,7 +41,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
@@ -50,11 +52,18 @@ dependencies {
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
-    implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
-    //RxJava3 + RxAndroid
+    //Moshi
+    implementation 'com.squareup.moshi:moshi-kotlin:1.11.0'
+    implementation 'com.squareup.moshi:moshi-adapters:1.9.2'
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.13.0'
+
+    //RxJava3 + RxAndroid + RxKotlin
     implementation "io.reactivex.rxjava3:rxjava:3.1.5"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxkotlin:3.0.1'
+    implementation 'com.jakewharton.rxrelay3:rxrelay:3.0.1'
 
 
     //Fragment KTX
@@ -70,7 +79,19 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.5.1"
 
 
-    //View Model KTX
-//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0-alpha01"
+//    View Model KTX
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0-alpha01"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.0-alpha01'
 
+    // Timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    // Hilt
+    implementation "com.google.dagger:hilt-android:2.38.1"
+    kapt "com.google.dagger:hilt-compiler:2.38.1"
+
+    // Rx binding
+    implementation 'com.jakewharton.rxbinding4:rxbinding-core:4.0.0'
+    implementation 'com.jakewharton.rxbinding4:rxbinding-appcompat:4.0.0'
 }
