--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="me.dungngminh.authenticationapp">
-
+    package="me.dungngminh.verygoodblogapp">
+    <uses-permission android:name="android.permission.INTERNETr"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,10 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AuthenticationApp"
+        android:theme="@style/Theme.VeryGoodBlogApp"
         tools:targetApi="31">
         <activity
-            android:name=".features.authentication.MainActivity"
+            android:name="me.dungngminh.verygoodblogapp.features.authentication.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
