--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,8 @@ plugins {
     id 'com.android.library' version '7.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
     id 'androidx.navigation.safeargs.kotlin' version '2.5.1' apply false
-
+    id "org.jetbrains.kotlin.kapt" version "1.7.10"
+    id 'com.google.dagger.hilt.android' version '2.43.2' apply false
 }
 
 task clean(type: Delete) {
