--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,12 +38,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    namespace 'me.dungngminh.verygoodblogapp'
 }
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0-alpha01'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
