add new blog flow, navigation, activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,17 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".features.new_blog.NewBlogActivity"
+            android:exported="false" />
+        <activity
             android:name=".features.splash.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".features.main.MainActivity"
             android:exported="false">
@@ -37,4 +40,5 @@
             android:exported="false"
             android:windowSoftInputMode="adjustPan|adjustResize" />
     </application>
+
 </manifest>
