--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ coil = "2.5.0"
 constraintlayout = "2.1.4"
 converter-moshi = "2.9.0"
 core-ktx = "1.12.0"
+desugar_jdk_libs = "2.0.4"
 espresso-core = "3.5.1"
 flowbinding-android = "1.2.0"
 fragment-ktx = "1.6.2"
@@ -25,7 +26,9 @@ retrofit = "2.9.0"
 timber = "5.0.1"
 kotlin = "1.9.22"
 ksp = "1.9.22-1.0.16"
-android-application = "8.2.1"
+android-application = "8.2.2"
+fragment = "1.6.2"
+timeago = "4.0.3"
 
 [libraries]
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
@@ -42,6 +45,7 @@ androidx-navigation-fragment-ktx = { module = "androidx.navigation:navigation-fr
 androidx-navigation-runtime-ktx = { module = "androidx.navigation:navigation-runtime-ktx", version.ref = "navigation" }
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "converter-moshi" }
+desugar_jdk_libs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar_jdk_libs" }
 flowbinding-android = { module = "io.github.reactivecircus.flowbinding:flowbinding-android", version.ref = "flowbinding-android" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt-android" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt-android" }
@@ -55,6 +59,8 @@ moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "mosh
 moshi-kotlin-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen", version.ref = "moshi-kotlin-codegen" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
+androidx-fragment = { group = "androidx.fragment", name = "fragment", version.ref = "fragment" }
+timeago = { module = "com.github.marlonlom:timeago", version.ref = "timeago" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android-application" }
