--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,6 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".features.blog_detail.MainActivity"
-            android:exported="false" />
-        <activity
             android:name=".features.blog_detail.BlogDetailActivity"
             android:exported="false" />
         <activity
@@ -35,7 +32,8 @@
         </activity>
         <activity
             android:name=".features.main.MainActivity"
-            android:exported="false">
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
